objects/Case.object
<CustomObject>
    <fields>
        <fullName>Site_Customer_Details__c</fullName>
        <inlineHelpText>Customer site Name and complete address.</inlineHelpText>
        <label>Site Customer Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Comments__c</fullName>
        <description>Description of resolution or solution</description>
        <inlineHelpText>Description of resolution or solution</inlineHelpText>
        <label>Solution Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <description>Used for Cooling, Heating and Drives CRM Support</description>
        <inlineHelpText>For Cooling, Heating and Drives Support Cases</inlineHelpText>
        <label>Support Level</label>
        <picklist>
            <picklistValues>
                <fullName>Level 1 Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2 Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3 Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Department__c</fullName>
        <label>Team/Department</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Change__c</fullName>
        <inlineHelpText>Choose type of change being requested</inlineHelpText>
        <label>Type of Change</label>
        <picklist>
            <picklistValues>
                <fullName>Field - Not integrated to SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Fields - used by all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current fields - used by 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist values - used by all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist values - used by 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New fields</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Page Layout - used by all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Page layout - used by 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Page layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organizational Defaults</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field - Integrated to SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Objects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security - Roles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Users when there are no more licenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data clean-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UA_Testers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User acceptance testers</description>
        <label>UA Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Update_quoted_prices_after_Sep_1st__c</fullName>
        <label>Update quoted prices after Sep 1st</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Used_Commissioning_Days__c</fullName>
        <inlineHelpText>Number of commissionings days used for this case</inlineHelpText>
        <label>Used Commissioning Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Country__c</fullName>
        <label>User Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <inlineHelpText>Enter the email address of the new user for whom you are requesting the license.</inlineHelpText>
        <label>User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <inlineHelpText>first inital last name for Power Solutions
U number for Cooling, Heating, Drives</inlineHelpText>
        <label>User ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Cost__c</fullName>
        <label>Calculated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Rate__c</fullName>
        <label>Calculated Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Utilization_Category__c</fullName>
        <label>Utilization Category</label>
        <picklist>
            <picklistValues>
                <fullName>Billable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Billable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Phase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Phase</label>
        <referenceTo>project_cloud__Project_Phase__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <referenceTo>project_cloud__Project_Task__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Worked_Hours__c</fullName>
        <label>Entered Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>Change_Management_Cases</fullName>
        <active>true</active>
        <businessProcess>Change Management Case</businessProcess>
        <description>This case type is used for all Salesforce change requests for the entire Danfoss CRM business system.</description>
        <label>Change Management Cases</label>
    </recordTypes>
    <recordTypes>
        <fullName>Complaint</fullName>
        <active>true</active>
        <businessProcess>Customer Service Process</businessProcess>
        <description>All the Customer Complaint related to Danfoss Cooling, Heating &amp; Drives (Product, Delivery and Interaction)</description>
        <label>Complaint</label>
    </recordTypes>
    <recordTypes>
        <fullName>Plus_1_Helpdesk</fullName>
        <active>true</active>
        <businessProcess>Plus%2B1 Helpdesk Process</businessProcess>
        <description>For Plus+1 Helpdesk</description>
        <label>Plus+1 Helpdesk</label>
    </recordTypes>
    <recordTypes>
        <fullName>PortalCase</fullName>
        <active>true</active>
        <businessProcess>Portal Case</businessProcess>
        <description>This case type is for Power Solutions&apos; customers to submit cases through PartnerLink</description>
        <label>PartnerLink Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pricing</fullName>
        <active>true</active>
        <businessProcess>PS Pricing</businessProcess>
        <description>This case type is for Power Solutions users to submit pricing requests to the Price Planning Teams</description>
        <label>Pricing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Inquiry</fullName>
        <active>true</active>
        <businessProcess>Customer Service Process</businessProcess>
        <description>All the Customer Request related to Products for Cooling, Heating &amp; Drives</description>
        <label>Product Inquiry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Request</fullName>
        <active>true</active>
        <businessProcess>Customer Service Process</businessProcess>
        <description>All the Customer Request related to after Sales Service for Cooling, Heating &amp; Drives</description>
        <label>Service Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Support_Case</fullName>
        <active>true</active>
        <businessProcess>Customer Service Process</businessProcess>
        <description>All the Customer request which is not related to Product Inquiry/ Complaint/ Service Request for Cooling, Heating &amp; Drives. Also it will serve as a starting generic template for the Cases created via email.</description>
        <label>Support Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transactional_Request</fullName>
        <active>true</active>
        <businessProcess>Customer Service Process</businessProcess>
        <description>All the Customer Request related to Transactional Process like Order Inquiry, Accounts Receivable, Delivery Logistics for Cooling, Heating &amp; Drives.</description>
        <label>Transactional Request</label>
    </recordTypes>
    <validationRules>
        <fullName>CER_PREVENT_MOVING_FROM_L2_TO_L1</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
OR(
RecordType.DeveloperName = &apos;Complaint&apos;,
RecordType.DeveloperName = &apos;Product_Inquiry&apos;,
RecordType.DeveloperName = &apos;Service_Request&apos;,
RecordType.DeveloperName = &apos;Support_Case&apos;,
RecordType.DeveloperName = &apos;Transactional_Request&apos;
), 
Owner:Queue.Id !=&quot;&quot;,
CONTAINS(HistoryQID__c , &quot;1LQ&quot;),
OR(
CONTAINS(HistoryQID__c , &quot;2LQ&quot;),
CONTAINS(HistoryQID__c , &quot;3LQ&quot;)
),
CONTAINS( $Setup.QueueLevelIDs__c.X1stLevelQ__c , Owner:Queue.Id )
, 
ISCHANGED(OwnerId) 
)</errorConditionFormula>
        <errorMessage>Can&apos;t move Case back to a 1st Line Queue</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CER_PREVENT_PLACING_BACK_ON_QUEUE</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
OR(
RecordType.DeveloperName = &apos;Complaint&apos;,
RecordType.DeveloperName = &apos;Product_Inquiry&apos;,
RecordType.DeveloperName = &apos;Service_Request&apos;,
RecordType.DeveloperName = &apos;Support_Case&apos;,
RecordType.DeveloperName = &apos;Transactional_Request&apos;
), 
CONTAINS(HistoryQID__c , LEFT(Owner:Queue.Id,15) ),
Owner:Queue.Id !=  CurrentQID__c,
Owner:Queue.Id !=&quot;&quot;
)</errorConditionFormula>
        <errorMessage>Can&apos;t put case back on a queue it has already been on</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CE_CHANNEL_PATNER_MANDATORY</fullName>
        <active>true</active>
        <description>Assigned to Channel Partner is Mandatory when Case Status is selected as &quot;9. Assigned to Channel Partner&quot;</description>
        <errorConditionFormula>AND(
ISPICKVAL(Status, &apos;9. Assigned to Channel Partner&apos;) ,
ISBLANK(Assigned_To_Channel_Partner__c)
)</errorConditionFormula>
        <errorDisplayField>Assigned_To_Channel_Partner__c</errorDisplayField>
        <errorMessage>Please select the Assigned Channel Partner, when selecting the Case status as &quot;9. Assigned to Channel Partner&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CE_COMMENTS_REQUIRED_FOR_RESOLUTION_OTHE</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
RecordType.DeveloperName = &apos;Complaint&apos;,
RecordType.DeveloperName = &apos;Product_Inquiry&apos;,
RecordType.DeveloperName = &apos;Service_Request&apos;,
RecordType.DeveloperName = &apos;Support_Case&apos;,
RecordType.DeveloperName = &apos;Transactional_Request&apos;
), 
ISPICKVAL(Case_Resolution__c, &apos;Other&apos;),
ISBLANK( Resolution_Comments__c )
)</errorConditionFormula>
        <errorDisplayField>Resolution_Comments__c</errorDisplayField>
        <errorMessage>Required for &quot;Other&quot; resolution</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CE_CONTACT_OR_USER_OR_PHONE_MANDATORY</fullName>
        <active>true</active>
        <description>Contact is Manadatory while creating Case. Else the Web Phone or Internal User should be provided.</description>
        <errorConditionFormula>OR(
AND(
OR(
RecordType.DeveloperName = &apos;Complaint&apos;,
RecordType.DeveloperName = &apos;Product_Inquiry&apos;,
RecordType.DeveloperName = &apos;Service_Request&apos;,
RecordType.DeveloperName = &apos;Support_Case&apos;,
RecordType.DeveloperName = &apos;Transactional_Request&apos;
),
AND(
ISBLANK(ContactId),
ISBLANK(SuppliedPhone),
ISBLANK(Requestor_Internal_Users__c),
ISBLANK(SuppliedEmail)
)
),
AND(
ISBLANK(ContactId),
ISPICKVAL( Reason , &apos;Customer Support&apos;)
)
)</errorConditionFormula>
        <errorDisplayField>ContactId</errorDisplayField>
        <errorMessage>Contact is mandatory when registering Request from Customer.
For Support Case Contact is mandatory when Case Reason is set to &apos;Customer Support&apos;.
For Internal Support cases please select the Internal Requester.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CE_CSC_CLOSE_CASE_CAN_ONLY_BE_REOPENED</fullName>
        <active>true</active>
        <description>CSC Closed cases can only be reopened before taking any further action.</description>
        <errorConditionFormula>AND(
OR(
RecordType.DeveloperName = &apos;Complaint&apos;,
RecordType.DeveloperName = &apos;Product_Inquiry&apos;,
RecordType.DeveloperName = &apos;Service_Request&apos;,
RecordType.DeveloperName = &apos;Support_Case&apos;,
RecordType.DeveloperName = &apos;Transactional_Request&apos;
),
NOT(ISPICKVAL(Status, &apos;19. Reopen&apos;)),
NOT(ISPICKVAL(Status, &apos;Closed&apos;)), 
$User.Username != &apos;piuser@sauer-danfoss.com&apos;,
ISPICKVAL(PRIORVALUE(Status), &apos;Closed&apos;) )</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>You can only Reopen a closed case before taking any further action. Please select the Status &apos;19. Reopen&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CE_INDIA_SERVICE_WARRANTY_TYPE_MANDATORY</fullName>
        <active>true</active>
        <description>Service Warranty Type is mandatory in India when Case is closed.</description>
        <errorConditionFormula>AND( 
 text(Owner:User.Region__c) = &apos;India&apos;, 
OR (text (Reason) = &apos;Aftersales Service&apos;, 
text (Reason) = &apos;AMC&apos;), 
ISPICKVAL(Status, &apos;Closed&apos;), 
ISPICKVAL(Service_Warranty_Type__c,&apos;&apos;) )</errorConditionFormula>
        <errorDisplayField>Service_Warranty_Type__c</errorDisplayField>
        <errorMessage>Please select a Service Warranty Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CE_REOPEN_REASON_MANDATORY</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
RecordType.DeveloperName = &apos;Complaint&apos;,
RecordType.DeveloperName = &apos;Product_Inquiry&apos;,
RecordType.DeveloperName = &apos;Service_Request&apos;,
RecordType.DeveloperName = &apos;Support_Case&apos;,
RecordType.DeveloperName = &apos;Transactional_Request&apos;
),  
ISPICKVAL(Status, &apos;19. Reopen&apos;),   
ISPICKVAL(Reopen_Reason__c,&apos;&apos;) )</errorConditionFormula>
        <errorDisplayField>Reopen_Reason__c</errorDisplayField>
        <errorMessage>Reopen reason mandatory while re-opening the Case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CE_RESOLUTION_MANDATORY_WHEN_CLOSED</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
RecordType.DeveloperName = &apos;Complaint&apos;,
RecordType.DeveloperName = &apos;Product_Inquiry&apos;,
RecordType.DeveloperName = &apos;Service_Request&apos;,
RecordType.DeveloperName = &apos;Support_Case&apos;,
RecordType.DeveloperName = &apos;Transactional_Request&apos;
),  
ISPICKVAL( Status , &apos;Closed&apos;),   
ISPICKVAL(  Case_Resolution__c  , &apos;&apos;)
)</errorConditionFormula>
        <errorDisplayField>Case_Resolution__c</errorDisplayField>
        <errorMessage>Case Resolution is Mandatory while closing the case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CE_SERVICE_ENGINEER_MANDATORY</fullName>
        <active>true</active>
        <description>For the Service Cases Service Engineer Name is Mandatory when selecting the status as &quot;8. Assigned to Service Engineer&quot;</description>
        <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Service_Request&apos;,
ISPICKVAL(Status, &apos;8. Assigned to Service Engineer&apos;) ,
ISBLANK(Assigned_Service_Engineer_Name__c) 
)</errorConditionFormula>
        <errorDisplayField>Assigned_Service_Engineer_Name__c</errorDisplayField>
        <errorMessage>Please specify the Assigned to Service Engineer Name when Status is selected as &quot;8. Assigned to Service Engineer&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CSC_CANT_CLOSE_CASE_ON_Q</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
RecordType.DeveloperName = &apos;Complaint&apos;,
RecordType.DeveloperName = &apos;Product_Inquiry&apos;,
RecordType.DeveloperName = &apos;Service_Request&apos;,
RecordType.DeveloperName = &apos;Support_Case&apos;,
RecordType.DeveloperName = &apos;Transactional_Request&apos;
), 
TEXT(Status) = &quot;Closed&quot;,
Owner:Queue.Id != &quot;&quot;
)</errorConditionFormula>
        <errorMessage>Accept Ownership of the Case before Closure</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Price_Planning_Details</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.DeveloperName = &quot;Pricing&quot;, Account.Region__c = &apos;Europe&apos; , CONTAINS(TEXT(Pricing_Stage__c), &quot;2&quot;),
 OR( ISPICKVAL(Open_orders_to_be_updated__c,&quot;&quot; ) ,  ISPICKVAL( Update_quoted_prices_after_Sep_1st__c,&quot;&quot; ) )
)</errorConditionFormula>
        <errorMessage>Price Planning Details cannot be &quot;--None--&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Support_Level_Required</fullName>
        <active>true</active>
        <description>If Type of Effort is Support, Support Level is required - excluding Comatrol, PS and Turolla</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL(Business_Org__c, &quot;Comatrol&quot;)), NOT(ISPICKVAL(Business_Org__c, &quot;Power Solutions&quot;)), NOT(ISPICKVAL(Business_Org__c, &quot;Turolla&quot;)), INCLUDES( Level_of_Effort__c , &quot;Support&quot;),
 ISPICKVAL( Support_Level__c, &quot;&quot; ))</errorConditionFormula>
        <errorDisplayField>Support_Level__c</errorDisplayField>
        <errorMessage>Support Level selection is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__One_Project_Phase_or_Task</fullName>
        <active>true</active>
        <description>Only one of the lookups to the Project Objects can be selected</description>
        <errorConditionFormula>IF(ISBLANK(project_cloud__Project__c), 0, 1) + IF(ISBLANK(project_cloud__Project_Phase__c), 0, 1) + IF(ISBLANK(project_cloud__Project_Task__c), 0, 1) &gt; 1</errorConditionFormula>
        <errorMessage>Please select only one of: Project, Phase or Task</errorMessage>
    </validationRules>
</CustomObject>